@@ -24,7 +24,6 @@ import org.springframework.web.bind.annotation.RestController;
 import javax.servlet.http.Cookie;
 import javax.servlet.http.HttpServletResponse;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @ConditionalOnProperty(value = "spring.profiles.active", havingValue = "cookie")
 @Slf4j
@@ -37,6 +36,8 @@ public class CookieController {
     private final PasswordEncoder passwordEncoder;
     private final JwtCookieAuthenticationProvider jwtCookieAuthenticationProvider;
 
+    private static final String X_AUTH_TOKEN = "X-AUTH-TOKEN";
+
     @PostMapping("/join")
     public ResponseEntity<Member> join(@RequestBody MemberDto dto) {
         Member member = memberService.registerMember(dto);
@@ -45,7 +46,7 @@ public class CookieController {
     }
 
     @PostMapping("/login")
-    public ResponseEntity<?> login(@RequestBody MemberDto loginRequest, HttpServletResponse response) {
+    public ResponseEntity<MemberDetails> login(@RequestBody MemberDto loginRequest, HttpServletResponse response) {
         Member member = memberRepository.findByUsername(loginRequest.getUsername()).orElseThrow(MemberNotFoundException::new);
 
         if (!passwordEncoder.matches(loginRequest.getPassword(), member.getPassword())) {
@@ -53,13 +54,13 @@ public class CookieController {
         }
 
         MemberDetails memberDetails = new MemberDetails(member);
-        List<String> collect = memberDetails.getAuthorities().stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList());
-        collect.forEach(System.out::println);
+        List<String> collect = memberDetails.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList();
+        collect.forEach(log::info);
         String token = jwtCookieAuthenticationProvider.createToken(memberDetails.getUsername(), collect);
 
-        response.setHeader("X-AUTH-TOKEN", token);
+        response.setHeader(X_AUTH_TOKEN, token);
 
-        Cookie cookie = new Cookie("X-AUTH-TOKEN", token);
+        Cookie cookie = new Cookie(X_AUTH_TOKEN, token);
         cookie.setPath("/");
         cookie.setHttpOnly(true);
         cookie.setSecure(false); //enable when tls supported.
@@ -69,9 +70,9 @@ public class CookieController {
     }
 
     @PostMapping("/logout")
-    public ResponseEntity<?> logout(HttpServletResponse response) {
+    public ResponseEntity<String> logout(HttpServletResponse response) {
         log.debug("logout() called");
-        Cookie cookie = new Cookie("X-AUTH-TOKEN", null);
+        Cookie cookie = new Cookie(X_AUTH_TOKEN, null);
         cookie.setHttpOnly(true);
         cookie.setSecure(false);
         cookie.setMaxAge(0);
